rust/k8s/app-bar.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  labels:
    run: bar
  name: bar
spec:
  replicas: 2
  selector:
    matchLabels:
      run: bar
  template:
    metadata:
      labels:
        run: bar
    spec:
      containers:
      - name: bar
        image: mgreenly/bar:v0.2.0
        ports:
        - containerPort: 8088

---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  labels:
    run: bar
  name: bar
  annotations:
    haproxy.org/check: "enabled"
    haproxy.org/forwarded-for: "enabled"
    haproxy.org/load-balance: "leastconn"
spec:
  selector:
    run: bar
  ports:
  - name: port-2
    port: 80
    protocol: TCP
    targetPort: 8088
