rust/k8s/app-foo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  labels:
    run: foo
  name: foo
spec:
  replicas: 2
  selector:
    matchLabels:
      run: foo
  template:
    metadata:
      labels:
        run: foo
    spec:
      containers:
      - name: foo
        image: mgreenly/foo:v0.2.0
        ports:
        - containerPort: 8088

---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  labels:
    run: foo
  name: foo
  annotations:
    haproxy.org/check: "enabled"
    haproxy.org/forwarded-for: "enabled"
    haproxy.org/load-balance: "leastconn"
spec:
  selector:
    run: foo
  ports:
  - name: port-1
    port: 80
    protocol: TCP
    targetPort: 8088
