rust/k8s/app-www.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: www
  replicas: 2
  template:
    metadata:
      labels:
        app: www
    spec:
      containers:
      - name: www
        image: mgreenly/www:v1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: www-service
  labels:
    app: www
spec:
  type: ClusterIP
  selector:
    app: www
  ports:
  - name: tcp-80
    port: 80
    targetPort: 80
    protocol: TCP
