rust/k8s/logref-proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logref-proxy-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: logref-proxy
  replicas: 2
  template:
    metadata:
      labels:
        app: logref-proxy
    spec:
      containers:
      - name: logref-proxy
        image: mgreenly/logref-proxy:v2.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: logref-proxy-service
  labels:
    app: logref-proxy
spec:
  type: NodePort
  selector:
    app: logref-proxy
  ports:
  - name: tcp-80
    port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
