rust/k8s/proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: proxy
  replicas: 2
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
      - name: proxy
        image: mgreenly/proxy:v1.4
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-service
  labels:
    app: proxy
spec:
  type: NodePort
  selector:
    app: proxy
  ports:
  - name: tcp-80
    port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
