rust/k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: default
spec:
  rules:
  - host: logic-refinery.io
    http:
      paths:
      - path: /foo
        backend:
          serviceName: foo
          servicePort: 80
      - path: /bar
        backend:
          serviceName: bar
          servicePort: 80
# ---
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: haproxy-configmap
#   namespace: default
# data:
#   servers-increment: "42"
#   ssl-redirect: "OFF"
#   timeout-connect: "10s"
